--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
         <artifactId>testng</artifactId>
         <version>6.14.3</version>
     </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+        </dependency>
     </dependencies>
     </dependencyManagement>
 
