--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Generic</module>
-        <module>Amazon</module>
+        <!--module>Amazon</module-->
         <module>CNN</module>
-        <module>Facebook</module>
+        <!--<module>Facebook</module>-->
     </modules>
 
     <dependencyManagement>
