--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Generic</module>
-        <!--module>Amazon</module-->
+        <module>Amazon</module>
         <module>CNN</module>
         <module>AMEX</module>
-        <!--<module>Facebook</module>-->
+        <module>Facebook</module>
     </modules>
 
     <dependencyManagement>
@@ -41,7 +41,12 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>6.0.6</version>
+                <version>8.0.13</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.17</version>
             </dependency>
             <dependency>
                 <groupId>com.aventstack</groupId>
