--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>AMEX</module>
         <module>Facebook</module>
         <module>Ebay</module>
+        <module>RestAPI</module>
     </modules>
     <dependencyManagement>
         <dependencies>
