--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,11 @@
                 <artifactId>rest-assured</artifactId>
                 <version>3.0.6</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi-ooxml</artifactId>
-                <version>4.0.1</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.apache.poi</groupId>-->
+                <!--<artifactId>poi-ooxml</artifactId>-->
+                <!--<version>4.0.1</version>-->
+            <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
 
