Added main POM and generic POM

--- a/Generic/pom.xml
+++ b/Generic/pom.xml
@@ -71,5 +71,9 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
     </dependencies>
 </project>
